force-app/main/default/objects/Property_Image__c/Property_Image__c.object-meta.xml
<CustomObject>
    <label>Property Image</label>
    <nameField>
        <label>Property Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>