force-app/main/default/objects/Property_Image__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IF(ISBLANK(Property_Image_URL__c), &apos;&apos;, IMAGE(Property_Image_URL__c, &quot;Image&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>