force-app/main/default/objects/Property_Image__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Listings__c</referenceTo>
    <relationshipLabel>Property Images</relationshipLabel>
    <relationshipName>Property_Images</relationshipName>
    <type>Lookup</type>
</CustomField>