force-app/main/default/objects/Property_Image__c/recordTypes/Floor_Plan.recordType-meta.xml
<RecordType>
    <fullName>Floor_Plan</fullName>
    <active>true</active>
    <label>Floor Plan</label>
</RecordType>