force-app/main/default/objects/Property_Image__c/recordTypes/Photo.recordType-meta.xml
<RecordType>
    <fullName>Photo</fullName>
    <active>true</active>
    <label>Photo</label>
</RecordType>