force-app/main/default/objects/Property_Image__c/recordTypes/X3d.recordType-meta.xml
<RecordType>
    <fullName>X3d</fullName>
    <active>true</active>
    <label>3d</label>
</RecordType>